DBX2006/Dbxsrc/Common/Dbx32.h

 DbxContext;
 TAttribute;
 TClassToClass;
 TComponent;
 TGrid;
 TLayer;
 TNet;
 TNetClass;
 TPad;
 TPadViaShape;
 TPadViaStyle;
 TPattern;
 TPin;
 TPoint;
 TPrintJob;
 TRoom;
 TSymbol;
 TTextStyle;
 TLayerStackup;
TItem;
long 
DLLX TGetFirstCompItem(DbxContext* pContext, 
                       const char* pCompRefDes, 
                       TItem* pCompItem);
long 
DLLX TGetFirstComponent (DbxContext* pContext, 
                         TComponent* pComponent);
long 
DLLX TGetFirstCompPad (DbxContext* pContext, 
                       const char* pCompRefDes, 
                       TPad *pCompPad);
long 
DLLX TGetFirstCompPin    (DbxContext* pContext, 
                          const char* pCompRefDes, 
                          TPin*   pTPin);
long 
DLLX TGetFirstCompSymbol (DbxContext* pContext, 
                          const char* pCompRefDes, 
                          TSymbol*    pTSymbol);
long  
DLLX  TGetFirstDesignAttribute (DbxContext*  pContext,  
                                TAttribute*    pTAttr); 
long  
DLLX  TGetFirstGrid (DbxContext* pContext,   
                     TGrid*      pTGrid);    
long 
DLLX  TGetFirstIncludedRoomComponent(DbxContext* pContext,     
                                     long        roomId,       
                                     TComponent* pTComponent); 
long 
DLLX TGetFirstLayer (DbxContext* pContext, 
                     TLayer* pLayer);
long  
DLLX  TGetFirstLayerAttribute (DbxContext*  pContext,  
                               long         layerId,   
                               TAttribute*  pTAttr);   
long 
DLLX TGetFirstLayerItem (DbxContext* pContext, 
                         long layerId, 
                         TItem* pLayerItem);
long
DLLX TGetFirstLayerStackup (DbxContext* pContext, 
                            TLayerStackup* pStackup);
long 
DLLX TGetFirstNet(DbxContext* pContext, 
                  TNet* pNet);
long 
DLLX TGetFirstNetClass(DbxContext* pContext, 
                  TNetClass* pNetClass);
long 
DLLX TGetFirstNetAttribute(DbxContext* pContext,       
                           long        netId,          
                           TAttribute* TAttribute);    
long 
DLLX TGetFirstNetClassAttribute(DbxContext* pContext,       
                                long        netClassId,     
                                TAttribute* TAttribute);    
long  
DLLX  TGetFirstNetClassNet (DbxContext* pContext,   
                            long        netClassId, 
                            TNet*       pTNet);     
long 
DLLX TGetFirstNetClassLayerRule(DbxContext* pContext,   
                                long        netClassId, 
                          const char*       layerName,  
                                TAttribute* pAttr);     
long 
DLLX TGetFirstNetClassLayerRuleLayerName(DbxContext* pContext,   
                                         long        netClassId, 
                                         TLayer*     pLayer);    
long 
DLLX TGetFirstNetItem (DbxContext* pContext, 
                       long netId, 
                       TItem* pNetItem);
long 
DLLX TGetFirstNetLayerRule(DbxContext* pContext,   
                           long        netId,      
                     const char*       layerName,  
                           TAttribute* pAttr);     
long 
DLLX TGetFirstNetLayerRuleLayerName(DbxContext* pContext,   
                                    long        netId,      
                                    TLayer*     pLayer);    
long 
DLLX TGetFirstNetNode(DbxContext* pContext,     
                      long        netId,        
                      TItem*      pNetNode);    
long
DLLX TGetFirstPadStyle(DbxContext*      pContext,
                       TPadViaStyle*    pTPadStyle);
long
DLLX TGetFirstPattern (DbxContext*  pContext,
                       TPattern*    pTPattern);
long 
DLLX TGetFirstPolyPadPoint(DbxContext* pContext, 
                           long        styleId,
                           long        layerNum, 
                           TPoint*     pPolyPoint);
long  
DLLX TGetFirstPolyPoint (DbxContext* pContext,     
                         long        polyId,       
                         TPoint*     pPolyPoint);  
long 
DLLX TGetFirstPrintJob(DbxContext * pContext, 
                       TPrintJob  * pPrintJob );
long  
DLLX  TGetFirstRoom (DbxContext* pContext,    
                     TRoom*      pTRoom);     
long  
DLLX  TGetFirstRoomAttribute (DbxContext*  pContext,    
                              long         roomId,      
                              TAttribute*  pTAttr);     
long  
DLLX  TGetFirstRoomPoint (DbxContext* pContext,   
                                   long roomId,   
                               TPoint* pTPoint);  
long 
DLLX TGetFirstSelectedItem (DbxContext* pContext, 
                            TItem* pSelectItem);
long 
DLLX TGetFirstSymAttribute(DbxContext* pContext,      
                            const char* pCompRefDes,   
                            TAttribute* TAttribute);   
long
DLLX TGetFirstSymbol  (DbxContext*  pContext,    
                       TSymbol*     pTSymbol);   
long 
DLLX TGetFirstSymbolPin  (DbxContext* pContext, 
                          const char* pSymbolRefDes, 
                          TPin*       pTPin);
long
DLLX TGetFirstViaStyle(DbxContext*      pContext,
                       TPadViaStyle*    pTViaStyle);
long 
DLLX TGetLayerById  (DbxContext* pContext, 
                     long layerId, 
                     TLayer* pLayer);
long 
DLLX TGetLayerByName(DbxContext* pContext, 
                     const char* pLayerName, 
                     TLayer* pLayer);
long 
DLLX TGetNetById  (DbxContext* pContext, 
                   long netId, 
                   TNet* pNet);
long 
DLLX TGetNetByName(DbxContext* pContext, 
                   const char* pNetName, 
                   TNet* pNet);
long 
DLLX TGetNetClassById (DbxContext* pContext, 
                            long netClassId, 
                       TNetClass* pNetClass);
long 
DLLX TGetNextBusNet   (DbxContext* pContext, 
                       TNet*       pTNet);
long 
DLLX TGetNextClassToClass(DbxContext* pContext, 
                          TClassToClass* pTClassToClass);
long 
DLLX TGetNextClassToClassAttribute(DbxContext* pContext,       
                                   TAttribute* TAttribute);    
long 
DLLX TGetNextClassToClassLayerRule(DbxContext* pContext,   
                                   TAttribute* pAttr);     
long 
DLLX TGetNextClassToClassLayerRuleLayerName(DbxContext* pContext,   
                                            TLayer*     pLayer);    
long 
DLLX TGetNextCompAttribute (DbxContext* pContext,      
                            TAttribute* TAttribute);   
long 
DLLX TGetNextComponent (DbxContext* pContext, 
                        TComponent* pComponent);
long 
DLLX TGetNextCompItem (DbxContext* pContext, 
                       TItem* pCompItem);
long 
DLLX TGetNextCompPad (DbxContext* pContext, 
                      TPad *pCompPad);
long 
DLLX TGetNextCompPin    (DbxContext* pContext, 
                         TPin*   pTPin);
long 
DLLX TGetNextCompSymbol  (DbxContext* pContext, 
                          TSymbol*    pTSymbol);
long  
DLLX  TGetNextDesignAttribute (DbxContext*  pContext,  
                               TAttribute*    pTAttr); 
long  
DLLX  TGetNextGrid (DbxContext* pContext,  
                    TGrid*      pTGrid);   
long  
DLLX  TGetNextIncludedRoomComponent (DbxContext* pContext,      
                                     TComponent* pTComponent);    
long 
DLLX TGetNextLayer (DbxContext* pContext, 
                    TLayer* pLayer);
long  
DLLX  TGetNextLayerAttribute (DbxContext*  pContext,  
                              TAttribute*    pTAttr); 
long 
DLLX TGetNextLayerItem (DbxContext* pContext, 
                        TItem* pLayerItem);
long 
DLLX TGetNextLayerStackup (DbxContext* pContext, 
                           TLayerStackup* pStackup);
long 
DLLX TGetNextNet (DbxContext* pContext, 
                  TNet* pNet);
long 
DLLX TGetNextNetAttribute (DbxContext* pContext,       
                           TAttribute* TAttribute);    
long 
DLLX TGetNextNetClass (DbxContext* pContext, 
                       TNetClass* pNetClass);
long 
DLLX TGetNextNetClassAttribute (DbxContext* pContext,       
                                TAttribute* TAttribute);    
long 
DLLX TGetNextNetClassLayerRule(DbxContext* pContext,   
                               TAttribute* pAttr);     
long 
DLLX TGetNextNetClassLayerRuleLayerName(DbxContext* pContext,   
                                        TLayer*     pLayer);    
long  
DLLX  TGetNextNetClassNet (DbxContext* pContext,   
                            TNet*       pTNet);     
long 
DLLX TGetNextNetItem (DbxContext* pContext, 
                      TItem* pNetItem);
long 
DLLX TGetNextNetLayerRule(DbxContext* pContext,   
                          TAttribute* pAttr);     
long 
DLLX TGetNextNetLayerRuleLayerName(DbxContext* pContext,   
                                   TLayer*     pLayer);    
long 
DLLX TGetNextNetNode(DbxContext* pContext, 
                     TItem* pNetNode);
long
DLLX TGetNextPadStyle(DbxContext*      pContext,
                      TPadViaStyle*    pTPadStyle);
long 
DLLX TGetNextPattern  (DbxContext*  pContext,
                       TPattern*    pTPattern);
long 
DLLX TGetNextPolyPadPoint(DbxContext* pContext, 
                          TPoint*     pPolyPoint);
long 
DLLX TGetNextPolyPoint(DbxContext* pContext, 
                       TPoint*     pPolyPoint);
long 
DLLX TGetNextPrintJob(DbxContext * pContext, 
                      TPrintJob  * pPrintJob );
long  
DLLX  TGetNextRoom (DbxContext* pContext,    
                    TRoom*      pTRoom);     
long  
DLLX  TGetNextRoomAttribute (DbxContext*  pContext,    
                             TAttribute*  pTAttr);     
long  
DLLX  TGetNextRoomPoint (DbxContext* pContext,   
                              TPoint* pTPoint);  
long 
DLLX TGetNextSelectedItem (DbxContext* pContext, 
                            TItem* pSelectItem);
long 
DLLX TGetNextSymAttribute (DbxContext* pContext,      
                            TAttribute* TAttribute);   
long
DLLX TGetNextSymbol   (DbxContext*  pContext,
                       TSymbol*     pTSymbol);
long 
DLLX TGetNextSymbolPin    (DbxContext* pContext, 
                         TPin*       pTPin);
long
DLLX TGetNextViaStyle(DbxContext*      pContext,
                      TPadViaStyle*    pTViaStyle);
long 
DLLX TGetPadShapeByLayer(DbxContext* pContext, 
                         long padStyleId,
                         long layerId, 
                         TPadViaShape* pPadShape);
long 
DLLX TGetPadStyle (DbxContext* pContext, 
                   long padStyleId, 
                   TPadViaStyle* pPadStyle);
long
DLLX TGetPatternByName(DbxContext*  pContext,
                       const char*  pPatternName,
                       TPattern*    pTPattern);
long
DLLX TGetSymbolByName (DbxContext*  pContext,
                       const char*  pSymbolName,
                       TSymbol*     pTSymbol);
long 
DLLX TGetTextStyle (DbxContext* pContext, 
                    long textStyleId, 
                    TTextStyle* pTextStyle);
long 
DLLX TGetViaShapeByLayer(DbxContext* pContext, 
                         long viaStyleId, 
                         long layerId, 
                         TPadViaShape* pViaShape);
long 
DLLX TGetViaStyle (DbxContext* pContext, 
                   long viaStyleId, 
                   TPadViaStyle* pViaStyle);