DBX2006/Dbxsrc/Common/dbx32.BAS


Declare Function TGetFirstCompItem Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, compItem As TItem) As Long
Declare Function TGetFirstComponent Lib "dbx32.dll" (Context As DbxContext, component As TComponent) As Long
Declare Function TGetFirstCompPad Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, compPad As TPad) As Long
Declare Function TGetFirstCompPin Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, pin As TPin) As Long
Declare Function TGetFirstCompSymbol Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, symbol As TSymbol) As Long
Declare Function TGetFirstDesignAttribute Lib "dbx32.dll" (Context As DbxContext, designAttr As TAttribute) As Long
Declare Function TGetFirstGrid Lib "dbx32.dll" (Context As DbxContext, grid As TGrid) As Long
Declare Function TGetFirstIncludedRoomComponent Lib "dbx32.dll" (Context As DbxContext, ByVal roomId As Long, component As TComponent) As Long
Declare Function TGetFirstLayer Lib "dbx32.dll" (Context As DbxContext, layer As TLayer) As Long
Declare Function TGetFirstLayerAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal layerId As Long, layerAttr As TAttribute) As Long
Declare Function TGetFirstLayerItem Lib "dbx32.dll" (Context As DbxContext, ByVal layerId As Long, layerItem As TItem) As Long
Declare Function TGetFirstLayerStackup Lib "dbx32.dll" (Context As DbxContext, stackup As TLayerStackup) As Long
Declare Function TGetFirstNet Lib "dbx32.dll" (Context As DbxContext, net As TNet) As Long
Declare Function TGetFirstNetAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, netAttribute As TAttribute) As Long
Declare Function TGetFirstNetClass Lib "dbx32.dll" (Context As DbxContext, netClass As TNetClass) As Long
Declare Function TGetFirstNetClassAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, netClassAttribute As TAttribute) As Long
Declare Function TGetFirstNetClassLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TGetFirstNetClassLayerRuleLayerName Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, pLayer As TLayer) As Long
Declare Function TGetFirstNetClassNet Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, net As TNet) As Long
Declare Function TGetFirstNetItem Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, netItem As TItem) As Long
Declare Function TGetFirstNetLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TGetFirstNetLayerRuleLayerName Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, pLayer As TLayer) As Long
Declare Function TGetFirstNetNode Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, netNode As TItem) As Long
Declare Function TGetFirstPadStyle Lib "dbx32.dll" (Context As DbxContext, padStyle As TPadViaStyle) As Long
Declare Function TGetFirstPattern Lib "dbx32.dll" (Context As DbxContext, pattern As TPattern) As Long
Declare Function TGetFirstPolyPadPoint Lib "dbx32.dll" (Context As DbxContext, ByVal styleId As Long, ByVal layerNum as Long, polyPoint As TPoint) As Long
Declare Function TGetFirstPolyPoint Lib "dbx32.dll" (Context As DbxContext, ByVal polyId As Long, polyPoint As TPoint) As Long
Declare Function TGetFirstPrintJob Lib "dbx32.dll" (Context As DbxContext, printJob As TPrintJob) As Long
Declare Function TGetFirstRoom Lib "dbx32.dll" (Context As DbxContext, room As TRoom) As Long
Declare Function TGetFirstRoomAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal roomId As Long, roomAttr As TAttribute) As Long
Declare Function TGetFirstRoomPoint Lib "dbx32.dll" (Context As DbxContext, ByVal roomId As Long, roomPoint As TPoint) As Long
Declare Function TGetFirstSelectedItem Lib "dbx32.dll" (Context As DbxContext, selectItem As TItem) As Long
Declare Function TGetFirstSymAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal symRefDes As String, symAttribute As TAttribute) As Long
Declare Function TGetFirstSymbol Lib "dbx32.dll" (Context As DbxContext, symbol As TSymbol) As Long
Declare Function TGetFirstSymbolPin Lib "dbx32.dll" (Context As DbxContext, ByVal symbolRefDes As String, pin As TPin) As Long
Declare Function TGetFirstViaStyle Lib "dbx32.dll" (Context As DbxContext, viaStyle As TPadViaStyle) As Long

Declare Function TGetLayerById Lib "dbx32.dll" (Context As DbxContext, ByVal layerId As Long, layer As TLayer) As Long
Declare Function TGetLayerByName Lib "dbx32.dll" (Context As DbxContext, ByVal layerName As String, layer As TLayer) As Long
Declare Function TGetNetById Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, net As TNet) As Long
Declare Function TGetNetByName Lib "dbx32.dll" (Context As DbxContext, ByVal netName As String, net As TNet) As Long
Declare Function TGetNetClassByName Lib "dbx32.dll" (Context As DbxContext, ByVal netClassName As String, netClass As TNetClass) As Long
Declare Function TGetNetClassById Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, netClass As TNetClass) As Long

Declare Function TGetNextBusNet Lib "dbx32.dll" (Context As DbxContext, pTNet As TNet) As Long
Declare Function TGetNextClassToClass Lib "dbx32.dll" (Context As DbxContext, classToClass As TClassToClass) As Long
Declare Function TGetNextClassToClassAttribute Lib "dbx32.dll" (Context As DbxContext, classToClassAttribute As TAttribute) As Long
Declare Function TGetNextClassToClassLayerRule Lib "dbx32.dll" (Context As DbxContext, pAttr As TAttribute) As Long
Declare Function TGetNextClassToClassLayerRuleLayerName Lib "dbx32.dll" (Context As DbxContext, pLayer As TLayer) As Long
Declare Function TGetNextCompAttribute Lib "dbx32.dll" (Context As DbxContext, compAttribute As TAttribute) As Long
Declare Function TGetNextCompItem Lib "dbx32.dll" (Context As DbxContext, compItem As TItem) As Long
Declare Function TGetNextComponent Lib "dbx32.dll" (Context As DbxContext, component As TComponent) As Long
Declare Function TGetNextCompPad Lib "dbx32.dll" (Context As DbxContext, compPad As TPad) As Long
Declare Function TGetNextCompPin Lib "dbx32.dll" (Context As DbxContext, pin As TPin) As Long
Declare Function TGetNextCompSymbol Lib "dbx32.dll" (Context As DbxContext, symbol As TSymbol) As Long
Declare Function TGetNextDesignAttribute Lib "dbx32.dll" (Context As DbxContext, designAttr As TAttribute) As Long
Declare Function TGetNextGrid Lib "dbx32.dll" (Context As DbxContext, grid As TGrid) As Long
Declare Function TGetNextIncludedRoomComponent Lib "dbx32.dll" (Context As DbxContext, component As TComponent) As Long
Declare Function TGetNextLayer Lib "dbx32.dll" (Context As DbxContext, layer As TLayer) As Long
Declare Function TGetNextLayerAttribute Lib "dbx32.dll" (Context As DbxContext, layerAttr As TAttribute) As Long
Declare Function TGetNextLayerItem Lib "dbx32.dll" (Context As DbxContext, layerItem As TItem) As Long
Declare Function TGetNextLayerStackup Lib "dbx32.dll" (Context As DbxContext, stackup As TLayerStackup) As Long
Declare Function TGetNextNet Lib "dbx32.dll" (Context As DbxContext, net As TNet) As Long
Declare Function TGetNextNetAttribute Lib "dbx32.dll" (Context As DbxContext, netAttribute As TAttribute) As Long
Declare Function TGetNextNetClass Lib "dbx32.dll" (Context As DbxContext, netClass As TNetClass) As Long
Declare Function TGetNextNetClassAttribute Lib "dbx32.dll" (Context As DbxContext, netClassAttribute As TAttribute) As Long
Declare Function TGetNextNetClassNet Lib "dbx32.dll" (Context As DbxContext, net As TNet) As Long
Declare Function TGetNextNetClassLayerRule Lib "dbx32.dll" (Context As DbxContext, pAttr As TAttribute) As Long
Declare Function TGetNextNetClassLayerRuleLayerName Lib "dbx32.dll" (Context As DbxContext, pLayer As TLayer) As Long
Declare Function TGetNextNetItem Lib "dbx32.dll" (Context As DbxContext, netItem As TItem) As Long
Declare Function TGetNextNetLayerRule Lib "dbx32.dll" (Context As DbxContext, pAttr As TAttribute) As Long
Declare Function TGetNextNetLayerRuleLayerName Lib "dbx32.dll" (Context As DbxContext, pLayer As TLayer) As Long
Declare Function TGetNextNetNode Lib "dbx32.dll" (Context As DbxContext, netNode As TItem) As Long
Declare Function TGetNextPadStyle Lib "dbx32.dll" (Context As DbxContext, padStyle As TPadViaStyle) As Long
Declare Function TGetNextPattern Lib "dbx32.dll" (Context As DbxContext, pattern As TPattern) As Long
Declare Function TGetNextPolyPoint Lib "dbx32.dll" (Context As DbxContext, polyPoint As TPoint) As Long
Declare Function TGetNextPolyPadPoint Lib "dbx32.dll" (Context As DbxContext, polyPoint As TPoint) As Long
Declare Function TGetNextPrintJob Lib "dbx32.dll" (Context As DbxContext, printJob As TPrintJob) As Long
Declare Function TGetNextRoom Lib "dbx32.dll" (Context As DbxContext, room As TRoom) As Long
Declare Function TGetNextRoomAttribute Lib "dbx32.dll" (Context As DbxContext, roomAttr As TAttribute) As Long
Declare Function TGetNextRoomPoint Lib "dbx32.dll" (Context As DbxContext, roomPoint As TPoint) As Long
Declare Function TGetNextSelectedItem Lib "dbx32.dll" (Context As DbxContext, selectItem As TItem) As Long
Declare Function TGetNextSymAttribute Lib "dbx32.dll" (Context As DbxContext, symAttribute As TAttribute) As Long
Declare Function TGetNextSymbol Lib "dbx32.dll" (Context As DbxContext, symbol As TSymbol) As Long
Declare Function TGetNextSymbolPin Lib "dbx32.dll" (Context As DbxContext, pin As TPin) As Long
Declare Function TGetNextViaStyle Lib "dbx32.dll" (Context As DbxContext, viaStyle As TPadViaStyle) As Long

Declare Function TGetPadShapeByLayer Lib "dbx32.dll" (Context As DbxContext, ByVal padStyleId As Long, ByVal layerId As Long, padShape As TPadViaShape) As Long
Declare Function TGetPadStyle Lib "dbx32.dll" (Context As DbxContext, ByVal padStyleId As Long, padStyle As TPadViaStyle) As Long
Declare Function TGetPatternByName Lib "dbx32.dll" (Context As DbxContext, ByVal pPatternbName As String, pattern As TPattern) As Long
Declare Function TGetSymbolByName Lib "dbx32.dll" (Context As DbxContext, ByVal pSymbolName As String, symbol As TSymbol) As Long
Declare Function TGetTextStyle Lib "dbx32.dll" (Context As DbxContext, ByVal textStyleId As Long, textStyle As TTextStyle) As Long
Declare Function TGetViaShapeByLayer Lib "dbx32.dll" (Context As DbxContext, ByVal viaStyleId As Long, ByVal layerId As Long, viaShape As TPadViaShape) As Long
Declare Function TGetViaStyle Lib "dbx32.dll" (Context As DbxContext, ByVal viaStyleId As Long, viaStyle As TPadViaStyle) As Long
